force-app/main/default/objects/Car_Options__c/Car_Options__c.object-meta.xml
<CustomObject>
    <label>Car Options</label>
    <nameField>
        <displayFormat>OPT-{000000}</displayFormat>
        <label>Car Options Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Car Options</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>