force-app/main/default/objects/Car_Options__c/fields/Car_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Car_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Car Configuration</label>
    <referenceTo>Car_Configuration__c</referenceTo>
    <relationshipLabel>Car Options</relationshipLabel>
    <relationshipName>Car_Options</relationshipName>
    <type>Lookup</type>
</CustomField>