force-app/main/default/objects/Car_Options__c/fields/Exterior_Color__c.field-meta.xml
<CustomField>
    <fullName>Exterior_Color__c</fullName>
    <label>Exterior Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pearl_White</fullName>
                <label>Pearl White</label>
            </value>
            <value>
                <fullName>VIP_Black</fullName>
                <label>VIP Black</label>
            </value>
            <value>
                <fullName>Pulsar_Red</fullName>
                <label>Pulsar Red</label>
            </value>
            <value>
                <fullName>Deep_Blue</fullName>
                <label>Deep Blue</label>
            </value>
            <value>
                <fullName>Modern_Green</fullName>
                <label>Modern Green</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>