force-app/main/default/objects/Car_Options__c/fields/Interior_Color__c.field-meta.xml
<CustomField>
    <fullName>Interior_Color__c</fullName>
    <label>Interior Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vegan_White</fullName>
                <label>Vegan White</label>
            </value>
            <value>
                <fullName>Vegan_Black</fullName>
                <label>Vegan Black</label>
            </value>
            <value>
                <fullName>Vegan_Tan</fullName>
                <label>Vegan Tan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>